Fixing rtpvp8 compatibility with the third draft

https://bugzilla.gnome.org/show_bug.cgi?id=671073